--- a/pages/poems.html
+++ b/pages/poems.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <title>bn sinceramente</title>
+    <title>sinceramente, bn</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/css/list.css">
     <link rel="icon" type="image/jpg" href="images/IconWindows.png" />
@@ -79,4 +79,5 @@
             </div>
         </div>
     </div>
+
 </body>
