--- a/pages/poems.html
+++ b/pages/poems.html
@@ -40,7 +40,7 @@
             <hr><br>
             <div class="list">
                 <!--
-                <a href="/pages/poemas/" class="option">
+                <a href="/pages/poemas/nome-ficheiro.html" class="option">
                     <h3>Example Title</h3>
                     <h4>22.03.2022 | 23h57</h4>
                 </a>
@@ -81,3 +81,4 @@
     </div>
 
 </body>
+
