--- a/pages/prosa.html
+++ b/pages/prosa.html
@@ -40,7 +40,7 @@
             <hr><br>
             <div class="list">
                 <!--
-                <a href="/pages/prosas/" class="option">
+                <a href="/pages/prosas/nome-ficheiro.html" class="option">
                     <h3>Example Title</h3>
                     <h3>DD.MM.YYYY | 00h00</h3>
                 </a>
@@ -65,3 +65,4 @@
     </div>
 
 </body>
+
