--- a/pages/eu.html
+++ b/pages/eu.html
@@ -7,7 +7,7 @@
     <title>sinceramente, bn</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/css/list.css">
-    <link rel="icon" type="image/jpg" href="images/IconWindows.png" />
+    <link rel="icon" type="image/jpg" href="images/icon.png" />
 </head>
 
 <body>
@@ -83,3 +83,4 @@
 
 
 </html>
+
