--- a/pages/poemas/lembra.html
+++ b/pages/poemas/lembra.html
@@ -7,7 +7,7 @@
     <title>sinceramente, bn</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="/css/list-id.css">
-    <link rel="icon" type="image/jpg" href="images/IconWindows.png" />
+    <link rel="icon" type="image/jpg" href="images/icon.png" />
 </head>
 
 <body>
@@ -66,3 +66,4 @@
     </div>
 
 </body>
+
